--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec \"tsx\" server.ts",
-    "build": "tsc",
+    "start": "node dist/server.js",
+    "start:prod": "node dist/server.js",
     "dev": "tsx server.ts",
+    "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
