--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,7 +5,6 @@
     "moduleResolution": "Node16",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "allowImportingTsExtensions": true,
     "strict": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
@@ -15,13 +14,11 @@
     "declarationMap": true,
     "sourceMap": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
     "types": ["node", "jest"]
   },
   "include": [
-    "*.ts",
-    "*.js"
+    "server.ts",
+    "schema.ts"
   ],
   "exclude": [
     "node_modules",
