Update production environment variables - project airbnb-for-tourists

--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
-VITE_API_BASE_URL=https://123airbnb-for-tourists.launchpulse.ai
-API_BASE_URL=https://123airbnb-for-tourists.launchpulse.ai
-FRONTEND_URL=https://123airbnb-for-tourists.launchpulse.ai
-BACKEND_URL=https://123airbnb-for-tourists.launchpulse.ai
-TUNNEL_ID=2ce1e3ff-d760-44d9-a083-f83869387c9c
-PROJECT_SLUG=123airbnb-for-tourists
-TUNNEL_DOMAIN=launchpulse.ai
+FRONTEND_URL=https://airbnb-for-tourists.fly.dev
+BACKEND_URL=http://localhost:3000
+VITE_API_BASE_URL=http://localhost:3000
+API_BASE_URL=http://localhost:3000
+ALLOWED_ORIGINS=https://airbnb-for-tourists.fly.dev
+NODE_ENV=production
+PORT=3000
+HOST=0.0.0.0
+PROJECT_SLUG=airbnb-for-tourists
+TUNNEL_DOMAIN=fly.dev
 SINGLE_SERVER_MODE=true
